--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "portfolio24",
-  "version": "0.1.0",
+  "name": "projects",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
+    "email": "email dev",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^11.0.6",
-    "next": "14.1.0",
+    "@editorjs/editorjs": "^2.28.1",
+    "@react-email/button": "0.0.11",
+    "@react-email/components": "^0.0.6",
+    "@react-email/html": "0.0.6",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "classnames": "^2.3.2",
+    "framer-motion": "^10.16.4",
+    "next": "13.5.4",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-email": "^1.9.3",
+    "react-icons": "^4.11.0",
+    "resend": "^0.15.3"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
+    "@editorjs/image": "^2.8.1",
+    "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "13.5.4",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3"
   }
 }
